docs(readme): add Docker build and Kubernetes example sections